--- a/src/input.css
+++ b/src/input.css
@@ -2,8 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3d2942;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8613a5;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #e03054;
+}
+
 .wrapper {
-  @apply relative w-full overflow-x-hidden min-h-screen py-4;
+  @apply relative w-full overflow-x-hidden min-h-screen py-4 lg:py-8;
 }
 
 .menu-close {
@@ -15,7 +35,7 @@
 }
 
 .navbar {
-  @apply px-4 pt-8 pb-4 sm:bg-trans-white font-work-sans;
+  @apply px-4 py-4 sm:bg-trans-white font-work-sans;
 }
 
 .mobile-right-side {
@@ -160,7 +180,7 @@
 }
 
 .creator-card {
-  @apply col-span-2 md:col-span-1 bg-creator-purple flex justify-start items-center p-6 shadow-creator-card-shadow;
+  @apply col-span-4 md:col-span-2 xl:col-span-1 bg-creator-purple flex justify-start items-center p-6 shadow-creator-card-shadow;
 }
 
 .creator-card-text {
@@ -169,4 +189,12 @@
 
 .vertical-line {
   @apply w-0 h-full bg-transparent border border-white ml-auto;
+}
+
+.subscribe-input {
+  @apply p-4 w-full md:w-1/2 lg:w-1/3 md:mx-auto bg-purple border border-yellow placeholder:text-white mt-8 font-work-sans text-xl text-white shadow-none outline-none;
+}
+
+.subscribe-btn {
+  @apply bg-yellow border border-yellow text-xl text-purple font-work-sans font-bold py-4 px-10 md:mr-6 hover:bg-purple hover:text-yellow ease-in-out duration-500 mt-8;
 }
